--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-16 Sat 14:53]
+#+CAPTION: Clock summary at [2017-09-16 Sat 15:03]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *51:23* |       |       | 100.0 |
+| *Total time*                                                                | *51:32* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 51:23   |       |       | 100.0 |
-| Active                                                                      |         | 51:23 |       | 100.0 |
+| Stories                                                                     | 51:32   |       |       | 100.0 |
+| Active                                                                      |         | 51:32 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.4 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:43 |   3.3 |
 | COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   1.7 |
@@ -35,16 +35,16 @@
 | COMPLETED Investigate the JSON break on Northwind model                     |         |       |  0:57 |   1.8 |
 | COMPLETED Rename ODB parameters                                             |         |       |  0:11 |   0.4 |
 | COMPLETED Investigate usage of origin type                                  |         |       |  0:15 |   0.5 |
-| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  25.3 |
+| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  25.2 |
 | COMPLETED Create yarn options                                               |         |       |  1:06 |   2.1 |
 | COMPLETED Merge knit with yarn                                              |         |       |  1:13 |   2.4 |
-| COMPLETED Add probing support to code generation tests                      |         |       |  2:45 |   5.4 |
+| COMPLETED Add probing support to code generation tests                      |         |       |  2:45 |   5.3 |
 | COMPLETED Find some way of scoping transform probing                        |         |       |  3:06 |   6.0 |
 | COMPLETED Catch directory generation errors in probe                        |         |       |  1:05 |   2.1 |
 | COMPLETED Remove dumping of models from log                                 |         |       |  0:06 |   0.2 |
 | COMPLETED Move model sorter from helpers                                    |         |       |  0:32 |   1.0 |
 | COMPLETED Add canonical archetype support to yarn                           |         |       |  7:18 |  14.2 |
-| STARTED Move enablement into yarn                                           |         |       |  2:18 |   4.5 |
+| STARTED Move enablement into yarn                                           |         |       |  2:27 |   4.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -881,6 +881,7 @@ Notes:
 - make is_enabled private in dependencies builder and see what breaks.
 
 *** STARTED Move enablement into yarn                                 :story:
+    CLOCK: [2017-09-16 Sat 14:54]--[2017-09-16 Sat 15:03] =>  0:09
     CLOCK: [2017-09-16 Sat 13:43]--[2017-09-16 Sat 14:53] =>  1:10
     CLOCK: [2017-09-16 Sat 12:45]--[2017-09-16 Sat 12:52] =>  0:07
     CLOCK: [2017-09-16 Sat 12:36]--[2017-09-16 Sat 12:44] =>  0:08
