quilt.cpp: add element to formatters context

--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,37 +14,37 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-16 Sat 15:25]
+#+CAPTION: Clock summary at [2017-09-16 Sat 18:17]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *51:52* |       |       | 100.0 |
+| *Total time*                                                                | *53:44* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 51:52   |       |       | 100.0 |
-| Active                                                                      |         | 51:52 |       | 100.0 |
+| Stories                                                                     | 53:44   |       |       | 100.0 |
+| Active                                                                      |         | 53:44 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.4 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:43 |   3.3 |
-| COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   1.7 |
-| COMPLETED Clean-up readme                                                   |         |       |  1:15 |   2.4 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:43 |   3.2 |
+| COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   1.6 |
+| COMPLETED Clean-up readme                                                   |         |       |  1:15 |   2.3 |
 | COMPLETED Rename transformers to adapters                                   |         |       |  0:28 |   0.9 |
-| COMPLETED Analysis on annotations and profiles                              |         |       |  2:26 |   4.7 |
-| COMPLETED Use namespaced stereotypes                                        |         |       |  1:49 |   3.5 |
+| COMPLETED Analysis on annotations and profiles                              |         |       |  2:26 |   4.5 |
+| COMPLETED Use namespaced stereotypes                                        |         |       |  1:49 |   3.4 |
 | COMPLETED Tailor dogen models                                               |         |       |  0:21 |   0.7 |
-| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  15.1 |
+| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  14.5 |
 | COMPLETED Remove extra copying in mapper                                    |         |       |  0:05 |   0.2 |
 | COMPLETED Investigate the JSON break on Northwind model                     |         |       |  0:57 |   1.8 |
-| COMPLETED Rename ODB parameters                                             |         |       |  0:11 |   0.4 |
+| COMPLETED Rename ODB parameters                                             |         |       |  0:11 |   0.3 |
 | COMPLETED Investigate usage of origin type                                  |         |       |  0:15 |   0.5 |
-| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  25.0 |
-| COMPLETED Create yarn options                                               |         |       |  1:06 |   2.1 |
+| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  24.2 |
+| COMPLETED Create yarn options                                               |         |       |  1:06 |   2.0 |
 | COMPLETED Merge knit with yarn                                              |         |       |  1:13 |   2.3 |
-| COMPLETED Add probing support to code generation tests                      |         |       |  2:45 |   5.3 |
-| COMPLETED Find some way of scoping transform probing                        |         |       |  3:06 |   6.0 |
-| COMPLETED Catch directory generation errors in probe                        |         |       |  1:05 |   2.1 |
+| COMPLETED Add probing support to code generation tests                      |         |       |  2:45 |   5.1 |
+| COMPLETED Find some way of scoping transform probing                        |         |       |  3:06 |   5.8 |
+| COMPLETED Catch directory generation errors in probe                        |         |       |  1:05 |   2.0 |
 | COMPLETED Remove dumping of models from log                                 |         |       |  0:06 |   0.2 |
 | COMPLETED Move model sorter from helpers                                    |         |       |  0:32 |   1.0 |
-| COMPLETED Add canonical archetype support to yarn                           |         |       |  7:18 |  14.1 |
-| STARTED Move enablement into yarn                                           |         |       |  2:47 |   5.4 |
+| COMPLETED Add canonical archetype support to yarn                           |         |       |  7:18 |  13.6 |
+| STARTED Move enablement into yarn                                           |         |       |  4:39 |   8.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -881,6 +881,9 @@ Notes:
 - make is_enabled private in dependencies builder and see what breaks.
 
 *** STARTED Move enablement into yarn                                 :story:
+    CLOCK: [2017-09-16 Sat 17:43]--[2017-09-16 Sat 18:17] =>  0:34
+    CLOCK: [2017-09-16 Sat 15:42]--[2017-09-16 Sat 16:53] =>  1:11
+    CLOCK: [2017-09-16 Sat 15:25]--[2017-09-16 Sat 15:32] =>  0:07
     CLOCK: [2017-09-16 Sat 15:04]--[2017-09-16 Sat 15:24] =>  0:20
     CLOCK: [2017-09-16 Sat 14:54]--[2017-09-16 Sat 15:03] =>  0:09
     CLOCK: [2017-09-16 Sat 13:43]--[2017-09-16 Sat 14:53] =>  1:10
@@ -926,6 +929,8 @@ Problems:
 To do:
 
 - kernel registrar type index map - done.
+- assistant to latch on to element; use new element properties where
+  possible.
 - c# formatter registrar type index map - done.
 - bug in template instantiating: artefact expansions do not seem to
   take kernel into account - done.
@@ -939,7 +944,18 @@ We need to make use of the exact same logic as implemented in
 functionality can be lifted and grafted onto quilt without any major
 changes.
 
-*** Facets incompatible with standards
+*** Remove artefact from assistant casting                            :story:
+
+At the moment we receiving an artefact parameter when casting yarn
+elements via the assistant, but we don't do anything with it. Remove
+it.
+
+*** Untabify windows templates                                        :story:
+
+It seems we have a lot of tabs on Visual Studio solutions, projects
+etc. Untabify the templates and regenerate all.
+
+*** Facets incompatible with standards                                :story:
 
 Some facets may not be supported for all settings of a language. For
 example the hash facet is not compatible with C++ 98. We need to have
