--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,39 +14,40 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-16 Sat 21:01]
+#+CAPTION: Clock summary at [2017-09-16 Sat 21:33]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *54:19* |       |       | 100.0 |
+| *Total time*                                                                | *54:49* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 54:19   |       |       | 100.0 |
-| Active                                                                      |         | 54:19 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.4 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:43 |   3.2 |
+| Stories                                                                     | 54:49   |       |       | 100.0 |
+| Active                                                                      |         | 54:49 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.3 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:43 |   3.1 |
 | COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   1.6 |
 | COMPLETED Clean-up readme                                                   |         |       |  1:15 |   2.3 |
 | COMPLETED Rename transformers to adapters                                   |         |       |  0:28 |   0.9 |
-| COMPLETED Analysis on annotations and profiles                              |         |       |  2:26 |   4.5 |
+| COMPLETED Analysis on annotations and profiles                              |         |       |  2:26 |   4.4 |
 | COMPLETED Use namespaced stereotypes                                        |         |       |  1:49 |   3.3 |
 | COMPLETED Tailor dogen models                                               |         |       |  0:21 |   0.6 |
-| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  14.4 |
+| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  14.3 |
 | COMPLETED Remove extra copying in mapper                                    |         |       |  0:05 |   0.2 |
 | COMPLETED Investigate the JSON break on Northwind model                     |         |       |  0:57 |   1.7 |
 | COMPLETED Rename ODB parameters                                             |         |       |  0:11 |   0.3 |
 | COMPLETED Investigate usage of origin type                                  |         |       |  0:15 |   0.5 |
-| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  23.9 |
+| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  23.7 |
 | COMPLETED Create yarn options                                               |         |       |  1:06 |   2.0 |
 | COMPLETED Merge knit with yarn                                              |         |       |  1:13 |   2.2 |
-| COMPLETED Add probing support to code generation tests                      |         |       |  2:45 |   5.1 |
+| COMPLETED Add probing support to code generation tests                      |         |       |  2:45 |   5.0 |
 | COMPLETED Find some way of scoping transform probing                        |         |       |  3:06 |   5.7 |
 | COMPLETED Catch directory generation errors in probe                        |         |       |  1:05 |   2.0 |
 | COMPLETED Remove dumping of models from log                                 |         |       |  0:06 |   0.2 |
 | COMPLETED Move model sorter from helpers                                    |         |       |  0:32 |   1.0 |
-| COMPLETED Add canonical archetype support to yarn                           |         |       |  7:18 |  13.4 |
+| COMPLETED Add canonical archetype support to yarn                           |         |       |  7:18 |  13.3 |
 | COMPLETED Remove artefact from assistant casting                            |         |       |  0:20 |   0.6 |
 | COMPLETED Untabify windows templates                                        |         |       |  0:04 |   0.1 |
-| STARTED Move enablement into yarn                                           |         |       |  4:50 |   8.9 |
+| STARTED Split out transforms from post-processing chain                     |         |       |  0:30 |   0.9 |
+| STARTED Move enablement into yarn                                           |         |       |  4:50 |   8.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -896,6 +897,33 @@ it.
 
 It seems we have a lot of tabs on Visual Studio solutions, projects
 etc. Untabify the templates and regenerate all.
+
+*** STARTED Split out transforms from post-processing chain           :story:
+    CLOCK: [2017-09-16 Sat 21:02]--[2017-09-16 Sat 21:32] =>  0:30
+
+We have a lot of transforms in the post-processing chain. Many of
+these do not actually require an endomodel; they are just traversing
+all elements and doing something to them. We should look at all of the
+transforms there and get rid of all of them that don't actually
+require an endomodel. For these we should create a new chain that
+operates on just models.
+
+Notes:
+
+- we need a good name for this chain since pre/post-processing are
+  already pretty vague.
+- we may need to still visit the elements.
+
+Tasks:
+
+- rename pre/post-processing chains to =endomodel_...=. Rename
+  validators too.
+- create a =model_postprocessing_chain= with all the transforms after
+  =associations_transform=.
+- create a model generation chain that owns the endomodel to model
+  transform and the model post-processing pipeline.
+- delete all the endomodel members that are no longer required; update
+  adapter. Update yarn diagram.
 
 *** STARTED Move enablement into yarn                                 :story:
     CLOCK: [2017-09-16 Sat 20:50]--[2017-09-16 Sat 21:01] =>  0:11
