--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,39 +14,39 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-16 Sat 21:33]
+#+CAPTION: Clock summary at [2017-09-17 Sun 14:21]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *54:49* |       |       | 100.0 |
+| *Total time*                                                                | *55:05* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 54:49   |       |       | 100.0 |
-| Active                                                                      |         | 54:49 |       | 100.0 |
+| Stories                                                                     | 55:05   |       |       | 100.0 |
+| Active                                                                      |         | 55:05 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.3 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:43 |   3.1 |
 | COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   1.6 |
 | COMPLETED Clean-up readme                                                   |         |       |  1:15 |   2.3 |
-| COMPLETED Rename transformers to adapters                                   |         |       |  0:28 |   0.9 |
+| COMPLETED Rename transformers to adapters                                   |         |       |  0:28 |   0.8 |
 | COMPLETED Analysis on annotations and profiles                              |         |       |  2:26 |   4.4 |
 | COMPLETED Use namespaced stereotypes                                        |         |       |  1:49 |   3.3 |
 | COMPLETED Tailor dogen models                                               |         |       |  0:21 |   0.6 |
-| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  14.3 |
+| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  14.2 |
 | COMPLETED Remove extra copying in mapper                                    |         |       |  0:05 |   0.2 |
 | COMPLETED Investigate the JSON break on Northwind model                     |         |       |  0:57 |   1.7 |
 | COMPLETED Rename ODB parameters                                             |         |       |  0:11 |   0.3 |
 | COMPLETED Investigate usage of origin type                                  |         |       |  0:15 |   0.5 |
-| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  23.7 |
+| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  23.6 |
 | COMPLETED Create yarn options                                               |         |       |  1:06 |   2.0 |
 | COMPLETED Merge knit with yarn                                              |         |       |  1:13 |   2.2 |
 | COMPLETED Add probing support to code generation tests                      |         |       |  2:45 |   5.0 |
-| COMPLETED Find some way of scoping transform probing                        |         |       |  3:06 |   5.7 |
+| COMPLETED Find some way of scoping transform probing                        |         |       |  3:06 |   5.6 |
 | COMPLETED Catch directory generation errors in probe                        |         |       |  1:05 |   2.0 |
 | COMPLETED Remove dumping of models from log                                 |         |       |  0:06 |   0.2 |
 | COMPLETED Move model sorter from helpers                                    |         |       |  0:32 |   1.0 |
 | COMPLETED Add canonical archetype support to yarn                           |         |       |  7:18 |  13.3 |
 | COMPLETED Remove artefact from assistant casting                            |         |       |  0:20 |   0.6 |
 | COMPLETED Untabify windows templates                                        |         |       |  0:04 |   0.1 |
-| STARTED Split out transforms from post-processing chain                     |         |       |  0:30 |   0.9 |
+| STARTED Split out transforms from post-processing chain                     |         |       |  0:46 |   1.4 |
 | STARTED Move enablement into yarn                                           |         |       |  4:50 |   8.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -899,6 +899,7 @@ It seems we have a lot of tabs on Visual Studio solutions, projects
 etc. Untabify the templates and regenerate all.
 
 *** STARTED Split out transforms from post-processing chain           :story:
+    CLOCK: [2017-09-17 Sun 14:05]--[2017-09-17 Sun 14:21] =>  0:16
     CLOCK: [2017-09-16 Sat 21:02]--[2017-09-16 Sat 21:32] =>  0:30
 
 We have a lot of transforms in the post-processing chain. Many of
